err/fourdigits.portlet.twitter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fourdigits'...
Listing './lib/python3.5/site-packages/fourdigits/portlet'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter/browser'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter/browser/stylesheets'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter/locales'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter/locales/nl'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter/locales/pt_BR'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter/profiles'...
Listing './lib/python3.5/site-packages/fourdigits/portlet/twitter/profiles/default'...
Compiling './lib/python3.5/site-packages/fourdigits/portlet/twitter/twitter.py'...
***   File "./lib/python3.5/site-packages/fourdigits/portlet/twitter/twitter.py", line 52
    raise ImportError, "Unable to load a json library"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fourdigits.portlet.twitter-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/oauth2'...
Listing './lib/python3.5/site-packages/oauth2/clients'...
Listing './lib/python3.5/site-packages/oauth2-1.9.0.post1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
